# vidnotes

./: .gitignore  CLAUDE.md  README.md  README.ua.md  config.toml.example  pyproject.toml
.claude/commands/: sdd-feature.md
specs/constitution/: mission.md  roadmap.md  tech-stack.md
specs/features/github-release-prep/: plan.md  requirements.md  tests.md  validation.md
specs/features/initial plan/: PLAN.md
specs/features/translation/: plan.md  requirements.md  tests.md  validation.md
specs/features/youtube-support/: plan.md  requirements.md  tests.md  validation.md
specs/skills/: changelog.md  test.md  validate.md
tests/: conftest.py  test_cli.py  test_gitignore.py  test_integration.py  test_package_meta.py  test_secrets_audit.py  test_summarizer.py  test_translation.py  test_youtube.py
vidnotes/: catalog.py  cli.py  config.py  course_prompt.md  default_prompt.md  extractor.py  fetcher.py  models.py  session.py  summarizer.py  translation_prompt.md  translator.py  writer.py  youtube.py  youtube_prompt.md
